# mki

./: .gitattributes  .gitignore  .replit  Makefile  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
.github/workflows/: playwright.yml
Untitled.xcworkspace/: contents.xcworkspacedata
docs/: INTERACTIVE_MAP_README.md
json-datasets/: ahmed.json  chains.json  gemini_progress.json  gemini_skipped.json  malik.json  mismatched_chains.json  narrator_aliases.json  narrators.json  skipped_chains.json  unfixable_chains.json
mki-agents/: pyproject.toml
mki-agents/localize/: .geocode_progress.json  .progress.json  __init__.py  (+5 more)
mki-api/: main.py  pyproject.toml
mki-datasets/: Makefile
mki-etl/: extract_sanad.py  extract_sanad_normalized.py  main.py  pyproject.toml
mki-etl/history/: extract_history.py
mki-etl/sanad_extraction/: add_chain_text.py  build_narrator_database.py  enrich_narrators.py  extract_sanad.py  extract_sanad_normalized.py  fix_chain_data.py  fix_chains_from_csv.py  fix_chains_gemini.py  fix_skipped_chains.py  merge_narrator_research.py  resolve_kinship.py  validate_chains.py
mki-etl/seera/: extract_seera.py  merge_seera.py
mki-etl/youtube/: extract_youtube_transcript.py
mki-ios/: Package.swift  README.md
mki-ui/: .gitignore  .replit  astro.config.mjs  eslint.config.js  package-lock.json  package.json  screenshot-hadith.js  tsconfig.json  wrangler.toml
mki-web/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  screenshot-hadith.mjs  wrangler.toml
tests/: homepage.spec.ts
(+195 files in other folders)
